--- a/estilos.css
+++ b/estilos.css
@@ -25,8 +25,8 @@
 
 .board-column-header {
 	position: relative;
-	height: 50px;
-	line-height: 50px;
+	/*height: 50px;
+	line-height: 50px;*/
 	overflow: hidden;
 	padding: 0 20px;
 	text-align: center;
@@ -35,11 +35,11 @@
 	border-radius: 3px 3px 0 0;
 }
 
-@media ( max-width : 600px) {
+/*@media ( max-width : 600px) {
 	.board-column-header {
 		text-indent: -1000px;
 	}
-}
+}*/
 
 .board-column.todo .board-column-header {
 	background: #4A9FF9;
@@ -89,11 +89,23 @@
 	box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
 
-@media ( max-width : 600px) {
+/*@media ( max-width : 600px) {
 	.board-item-content {
 		text-align: center;
 	}
 	.board-item-content span {
 		display: none;
 	}
+}*/
+
+.icon-color {
+    color: gray;
+}
+
+.icon-remove {
+	float: right;
+}
+
+.icon-close {
+	float: left;
 }
