--- a/estilos.css
+++ b/estilos.css
@@ -30,7 +30,7 @@
 	overflow: hidden;
 	padding: 0 20px;
 	text-align: center;
-	background: #333;
+	/*background: #333;*/
 	color: #fff;
 	border-radius: 3px 3px 0 0;
 }
@@ -40,17 +40,18 @@
 		text-indent: -1000px;
 	}
 }*/
-
 .board-column.todo .board-column-header {
 	background: #4A9FF9;
 }
 
-.board-column.working .board-column-header {
-	background: #f9944a;
-}
-
-.board-column.done .board-column-header {
-	background: #2ac06d;
+.board-column-footer {
+	position: relative;
+	overflow: hidden;
+	padding: 0 20px;
+	text-align: left;
+	background: #4A9FF9;
+	border-radius: 3px 3px 0 0;
+	border: 10px solid transparent;
 }
 
 .board-column-content {
@@ -97,15 +98,15 @@
 		display: none;
 	}
 }*/
-
 .icon-color {
-    color: gray;
+	color: gray;
 }
 
-.icon-remove {
+.icon-trash {
 	float: right;
 }
 
-.icon-close {
+.icon-plus {
 	float: left;
+	color: #fff;
 }
